<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:layout_marginBottom="30dp"
        android:paddingLeft="25dp"

        android:paddingRight="25dp"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/ic_home_black_24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"

            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/FullNameHint"
                android:id="@+id/FullNameHint"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/NickName"
                android:id="@+id/NickNameHint"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/emailHint"
                android:id="@+id/EmailHint"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/PasswordHint"
                android:id="@+id/PasswordHint"/>
        </android.support.design.widget.TextInputLayout>





        <android.support.v7.widget.AppCompatButton
            android:layout_width="400dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/butonRegister"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:id="@+id/ButtonRegister"
            android:padding="12dp"
            android:background="@drawable/white_rouded_button"
            />


    </LinearLayout>
    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/ProgressBarLogin"
        android:layout_centerInParent="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wait"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:id="@+id/Wait"
        android:layout_alignBottom="@id/ProgressBarLogin"
        android:layout_alignRight="@id/ProgressBarLogin"
        android:layout_alignLeft="@id/ProgressBarLogin"

        />



</RelativeLayout>
