<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epifi.epifi.SearchActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RL1">
        <include layout="@layout/snippet_top_search_bar"/>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_below="@id/RL1"
    android:layout_height="wrap_content">

<RelativeLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_grey_bottom"
    android:id="@+id/relLayout1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dondebuscar"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/relLayout1"
    android:padding="10dp"
    android:background="@color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:hint="@string/Ubicación"
        android:textColor="@color/colorAccent"
        android:id="@+id/hintUbicacionSearch"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:inputType="textCapCharacters"/>

</RelativeLayout>

</RelativeLayout>



<RelativeLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_grey_bottom"
    android:id="@+id/relLayout2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuantopagar"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/relLayout2"
    android:padding="10dp"
    android:background="@color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:hint="@string/Precio"
        android:id="@+id/hintPrecioSearch"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorAccent"
        android:background="@null"
        android:inputType="textCapCharacters"/>

</RelativeLayout>

</RelativeLayout>


<RelativeLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
    >



</RelativeLayout>


</LinearLayout>

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/ProgressBarSA"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>



    </RelativeLayout>


